--- a/fxcm.cfg
+++ b/fxcm.cfg
@@ -3,3 +3,6 @@ log_level = error
 log_file = C:\Users\tsejw\Desktop\Stock-Trading\fxcm.cfg
 access_token = '6b4421a5085b15448a105b2ab38987397db0ceb6'
 
+|ERROR|2020-09-25 05:28:54,856|Connection error: Connection refused by the server
+|ERROR|2020-09-25 19:06:18,574|Connection error: Your token is not authorized, please contact admin@fxcm.com
+|ERROR|2020-09-25 20:05:04,652|Connection error: Timed out loading data. Please try again.
